// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OrderListItem component should render OrderListItem with projectName 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "marginTop": 8,
      "padding": 8,
    }
  }
>
  <View
    style={
      Object {
        "borderBottomColor": "#EBEDEF",
        "borderBottomWidth": 1,
        "paddingBottom": 8,
      }
    }
  />
  <TouchableOpacity
    onPress={[Function]}
    style={
      Object {
        "flexDirection": "row",
        "paddingTop": 8,
      }
    }
  >
    <Image
      height={75}
      source={Object {}}
      width={75}
    />
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingLeft": 8,
        }
      }
    >
      <View>
        <View
          style={
            Object {
              "flexDirection": "row",
            }
          }
        >
          <Icon
            color="#63666A"
            name="md-folder"
            size={16}
            style={
              Object {
                "marginRight": 8,
              }
            }
          />
          <Text
            lineHeight={false}
            weight="bold"
          >
            test
          </Text>
        </View>
        <Text>
          1
        </Text>
        <Text>
          2
        </Text>
        <Text>
          3
        </Text>
      </View>
      <Icon
        color="#D0D3D4"
        name="ios-arrow-forward"
        size={25}
      />
    </View>
  </TouchableOpacity>
</View>
`;

exports[`OrderListItem component should render OrderListItem without projectName 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "marginTop": 8,
      "padding": 8,
    }
  }
>
  <View
    style={
      Object {
        "borderBottomColor": "#EBEDEF",
        "borderBottomWidth": 1,
        "paddingBottom": 8,
      }
    }
  />
  <TouchableOpacity
    onPress={[Function]}
    style={
      Object {
        "flexDirection": "row",
        "paddingTop": 8,
      }
    }
  >
    <Image
      height={75}
      source={Object {}}
      width={75}
    />
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingLeft": 8,
        }
      }
    >
      <View>
        <Text
          lineHeight={false}
          weight="bold"
        >
          1
        </Text>
        <Text>
          2
        </Text>
        <Text>
          3
        </Text>
      </View>
      <Icon
        color="#D0D3D4"
        name="ios-arrow-forward"
        size={25}
      />
    </View>
  </TouchableOpacity>
</View>
`;

exports[`OrderListItem component should render default header 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#FFFFFF",
      "marginTop": 8,
      "padding": 8,
    }
  }
>
  <View
    style={
      Object {
        "borderBottomColor": "#EBEDEF",
        "borderBottomWidth": 1,
        "paddingBottom": 8,
      }
    }
  >
    <Text
      weight="bold"
    >
      title
    </Text>
  </View>
  <TouchableOpacity
    onPress={[Function]}
    style={
      Object {
        "flexDirection": "row",
        "paddingTop": 8,
      }
    }
  >
    <Image
      height={75}
      source={Object {}}
      width={75}
    />
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "flexDirection": "row",
          "justifyContent": "space-between",
          "paddingLeft": 8,
        }
      }
    >
      <View>
        <View
          style={
            Object {
              "flexDirection": "row",
            }
          }
        >
          <Icon
            color="#63666A"
            name="md-folder"
            size={16}
            style={
              Object {
                "marginRight": 8,
              }
            }
          />
          <Text
            lineHeight={false}
            weight="bold"
          >
            test
          </Text>
        </View>
        <Text>
          1
        </Text>
        <Text>
          2
        </Text>
        <Text>
          3
        </Text>
      </View>
      <Icon
        color="#D0D3D4"
        name="ios-arrow-forward"
        size={25}
      />
    </View>
  </TouchableOpacity>
</View>
`;
